# distList

./: CMakeLists.txt  README.md  resource.qrc
src/: MainWindow.cpp  MainWindow.hpp  OperateWidget.cpp  OperateWidget.hpp  dirInputWidget.cpp  dirInputWidget.hpp  main.cpp  myDirListWidget.cpp  myDirListWidget.hpp
